--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 <a href="https://quizlet.com/707392861/katakana-flash-cards/" target="_blank">Katakana flash cards</a><br>
 <a href="https://docs.google.com/presentation/d/1_AVA0bSJChXwhs9h_57vbUr0lmWFBrSVQpxdhjERAzk/edit#slide=id.g1354fb6354d_0_10" target="_blank">Katakana work sheet</a> Exersises too!<br></a>
 Also use <a href="https://realkana.com" target="_blank">Real Kana</a> to learn the katakana characters.<br> 
+Also use <a href="https://www.learn-japanese-adventure.com/writing-japanese-katakana.html" target="_blank">Katakana Strokes</a> to help with your strokes.<br>
 <br>
 <br>
 </h4><br>
