--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 Also use <a href="https://realkana.com" target="_blank">Real Kana</a> to learn the katakana characters.<br> 
 Also use <a href="https://www.learn-japanese-adventure.com/writing-japanese-katakana.html" target="_blank">Katakana Strokes</a> to help with your strokes.<br>
 Test yourself <a href="https://www.sporcle.com/games/CommodoreAmazing/Katakana" target="_blank">Katakana test</a><br>
-<br>
+
+ <h2 style="padding: 0px; margin: 0px;">Spanish</h2>
+ 
+ <br>
 <br>
 </h4><br>
 </div>
