--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ Test yourself <a href="https://www.sporcle.com/games/CommodoreAmazing/Katakana" 
 
  <h2 style="padding: 0px; margin: 0px;">Spanish</h2>
  
+<a href="https://docs.google.com/document/d/1RQb2M0KLtRRZHFZ-iHqDBjWASo86j7xJBIfeBYtE4A0/edit" target="_blank">Spanish Family</a><br>
+
  <br>
 <br>
 </h4><br>
