--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
  <head>
-     <title>Will's library</title>
+     <title>Quizlet Library</title>
  <link rel="stylesheet" href="styles3.css">
  <link rel="shortcut icon" href="Images/wanshitong.jpg" type="image/x-icon">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
 <div class="container">
 
 <div class="banner">
-<h1 style="text-align: center; margin: auto;">Will's revision place</h1></div>
+<h1 style="text-align: center; margin: auto;">Tyson and Will's Quizlet Library</h1></div>
 
 
 
@@ -22,8 +22,8 @@
 
 <div class="contenttop">
 
-<h1 style="text-align: center; padding: 0px; margin: 0px;">Welcome to Wills library </h1>
-<h3 style="text-align: center; padding: 0px; margin: 0px;">Here you can find some of my Japanese. Email me if there are any problems!</h3>
+<h1 style="text-align: center; padding: 0px; margin: 0px;">Welcome to our Quizlet Library! </h1>
+<h3 style="text-align: center; padding: 0px; margin: 0px;">Here you can find some of our Quizlets. Email us if there are any problems!</h3>
 
 </div>
 
@@ -34,22 +34,19 @@
 
 <h4 style="padding: 0px; margin: 0px;">
 <a href="https://quizlet.com/707392861/katakana-flash-cards/" target="_blank">Katakana flash cards</a><br>
-<a href="https://docs.google.com/presentation/d/1_AVA0bSJChXwhs9h_57vbUr0lmWFBrSVQpxdhjERAzk/edit#slide=id.g1354fb6354d_0_10" target="_blank">Katakana work sheet</a> Exersises too!<br></a>
-Also use <a href="https://realkana.com" target="_blank">Real Kana</a> to learn the katakana characters.<br> 
-Also use <a href="https://www.learn-japanese-adventure.com/writing-japanese-katakana.html" target="_blank">Katakana Strokes</a> to help with your strokes.<br>
-Test yourself <a href="https://www.sporcle.com/games/CommodoreAmazing/Katakana" target="_blank">Katakana test</a><br>
+ <a href="https://realkana.com" target="_blank">Real Kana</a> to learn the katakana characters.<br> 
+<a href="https://www.learn-japanese-adventure.com/writing-japanese-katakana.html" target="_blank">Stroke order</a> to learn how to write the characters<br>
+<a href="https://www.sporcle.com/games/CommodoreAmazing/Katakana" target="_blank">Katakana test</a> to test yourself! 
+ <a href="https://docs.google.com/presentation/d/1_AVA0bSJChXwhs9h_57vbUr0lmWFBrSVQpxdhjERAzk/edit#slide=id.g1354fb6354d_0_10" target="_blank">Katakana work sheet</a> Exersises too!<br></a><br>  
 
- <h2 style="padding: 0px; margin: 0px;">Spanish</h2>
- 
-<a href="https://docs.google.com/document/d/1RQb2M0KLtRRZHFZ-iHqDBjWASo86j7xJBIfeBYtE4A0/edit" target="_blank">Spanish Family</a><br>
-
- <br>
-<br>
 </h4><br>
 </div>
 
 <div class="contentright">
-
+    <h2 style="padding: 0px; margin: 0px;">Spanish</h2>
+    <h4 style="padding: 0px; margin: 0px;">
+    <a href="https://quizlet.com/_bpxnyb?x=1jqt&i=3jg1wd" target="_blank">Family and Possesive pronouns</a><br>
+    <br><br><br><br></h4><br>
 </div>
 
 <div class="contentbottom">
@@ -57,7 +54,7 @@ Test yourself <a href="https://www.sporcle.com/games/CommodoreAmazing/Katakana" 
 
     </div>
 
-<div class="footer" >Made by Will Ryan <br> My Email Address: 56453@student.stkevins.vic.edu.au</div>
+<div class="footer" >Made by Tyson Solana and Will Ryan in June 2022 <br> Tyson's Email Address: 65904@student.stkevins.vic.edu.au<br> Will's Eamil Address: 56453@student.stkevins.vic.edu.au</div>
 </div>
 
 </body></html>
