--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="container">
 
 <div class="banner">
-<h1 style="text-align: center; margin: auto;">Tyson and Will's Quizlet Library</h1></div>
+<h1 style="text-align: center; margin: auto;">Will Power</h1></div>
 
 
 
